# cuboid

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  utility.cpp  utility.hpp
resources/: single_truck.pcd
tools/: xyz2pcd.cpp
